--- a/ROMS/External/ocean_waom4.in
+++ b/ROMS/External/ocean_waom4.in
@@ -196,7 +196,7 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
 ! Time-Stepping parameters.
 
-      NTIMES == 788400
+      NTIMES == 613200
           DT == 360.0d0 
      NDTFAST == 36
 
@@ -217,7 +217,7 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
 ! Input/Output parameters.
 
-       NRREC == 0
+       NRREC == -1
    LcycleRST == T
         NRST == 21900!every 3 month
         NSTA == 1
@@ -773,7 +773,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! Input NetCDF file names, [1:Ngrids].
 
      GRDNAME == /g/data2/gh9/oxr581/waom_frc/waom4_grd.nc
-     ININAME == /g/data2/gh9/oxr581/waom_frc/waom4_ini_premixed.nc
+     ININAME == ocean_rst.nc!/g/data2/gh9/oxr581/waom_frc/waom4_ini_premixed.nc
      ITLNAME == ocean_itl.nc
      IRPNAME == ocean_irp.nc
      IADNAME == ocean_iad.nc
